📕 added some more documentation to scripts

--- a/.env
+++ b/.env
@@ -1,1 +1,5 @@
+# Project configuration
+# slqalchemy address of where the database lives
 DATABASE_URL = "sqlite:///eval_db.sqlite3"
+# OpenAI API key used to parse the responses
+OPENAI_API_KEY = 
