--- a/pixi.toml
+++ b/pixi.toml
@@ -22,6 +22,7 @@ websocket-client = ">=1.6.1"
 jupyterlab = ">=4.3.4,<5"
 pytest = ">=8.3.4,<9"
 websockets = ">=14.1,<15"
+polars = ">=1.22.0,<2"
 
 [pypi-dependencies]
 cheshire-cat-api = "*"
