added fraction initial weight and fixed bugs

--- a/docker-cat/compose.yml
+++ b/docker-cat/compose.yml
@@ -5,6 +5,7 @@ services:
     depends_on:
       - qdrant
       - mariadb
+      - drymulator
     env_file:
       - .cat
       - path: .cat.local
