✨ added pause/resume + tests

--- a/drymulator/pyproject.toml
+++ b/drymulator/pyproject.toml
@@ -17,8 +17,9 @@ platforms = ["linux-64"]
 drymulator = { path = ".", editable = true }
 
 [tool.pixi.tasks]
-run-server = "uvicorn drymulator.server:app --reload"
+server = "uvicorn drymulator.server:app --reload"
 generate-client = "python generate-client.py"
+test = "pytest src/drymulator"
 
 [tool.pixi.dependencies]
 fastapi = ">=0.115.11,<0.116"
@@ -26,3 +27,4 @@ sqlmodel = ">=0.0.23,<0.0.24"
 ipykernel = ">=6.29.5,<7"
 openapi-python-client = ">=0.24.0,<0.25"
 pydantic-settings = ">=2.8.1,<3"
+pytest = ">=8.3.5,<9"
