updated container + setup declarative memory

--- a/docker-cat/compose.yml
+++ b/docker-cat/compose.yml
@@ -1,7 +1,7 @@
 services:
   cheshire-cat-core:
     build: .
-    container_name: cat_181
+    container_name: cat
     depends_on:
       - qdrant
       - mariadb
