--- a/pixi.toml
+++ b/pixi.toml
@@ -23,8 +23,16 @@ jupyterlab = ">=4.3.4,<5"
 pytest = ">=8.3.4,<9"
 websockets = ">=14.1,<15"
 polars = ">=1.22.0,<2"
+pandas = ">=2.3.2,<3"
+pydantic-settings = ">=2.10.1,<3"
+nbdev = ">=2.4.5,<3"
+ipywidgets = ">=8.1.7,<9"
 
 [pypi-dependencies]
 cheshire-cat-api = "*"
-weave = ">=0.51.39, <0.52"
-drymulator_client={path="drymulator/drymulator-client"}
+weave = ">=0.52.4, <0.53"
+drymulator_client={path="drymulator/drymulator-client", editable = true}
+cat_tools={path=".", editable = true}
+litellm = ">=1.76.0, <2"
+google-auth = ">=2.40.3, <3"
+google-cloud-aiplatform = ">=1.111.0, <2"
