--- a/pixi.toml
+++ b/pixi.toml
@@ -27,6 +27,7 @@ pandas = ">=2.3.2,<3"
 pydantic-settings = ">=2.10.1,<3"
 nbdev = ">=2.4.5,<3"
 ipywidgets = ">=8.1.7,<9"
+pyarrow = ">=21.0.0,<22"
 
 [pypi-dependencies]
 cheshire-cat-api = "*"
